--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -116,6 +116,8 @@ ul.links {
 
 ol {
   margin: 0 0 10px 40px;
+  overflow: auto;
+
 }
 
 ul ul,
