--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -83,7 +83,7 @@
 		@include breakpoint(720px) {
 			float: left;
 			margin: 1em 1em 0 0;
-			max-width: 480px;
+			width: auto;
 		}
 
 		.field--name-field-image-testimonial img {
